[package]
name = "sublist3r-rs"
version = "0.1.0"
description = "A Rust rewrite of Sublist3r"
authors = ["Nghi Nguyen <hamnghi250699@gmail.com>"]
license = "MIT"
repository = "https://github.com/nt54hamnghi/sublist3r-rs"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
enum_dispatch = "0.3.13"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "gzip", "cookies"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
enumerate-derive = { path = "enumerate-derive" }
fastrand = "2.3.0"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
url = "=2.5.4"
owo-colors = "4.2.1"
clap_complete = "4.5.50"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
rstest = "0.25.0"

[[bin]]
name = "s7r"
path = "src/main.rs"

# [[bin]]
# name = "debug"
# path = "src/debug/main.rs"

[lints.rust]
unsafe_code = { priority = 5, level = "forbid" }
# unused = { level = "allow", priority = -1 }

[lints.clippy]
all = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "allow" }
restriction = { priority = -1, level = "allow" }
